--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-pure-webview",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "react native webview",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/musicode/react-native-pure-webview#readme",
   "dependencies": {
-    "react-native-wkwebview-reborn": "^1.22.0"
+    "react-native-webview": "^2.5.0"
   }
 }
